--- a/index.html
+++ b/index.html
@@ -2,17 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/KDU_CS.png" />
-    
+
     <!-- Preconnect for performance -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 
+    <!-- Basic Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IEEE Computer Society KDU</title>
+    <meta name="description" content="Official website for IEEE Computer Society Student Branch Chapter of General Sir John Kotelawala Defence University">
+    <meta name="keywords" content="IEEE, KDU, Computer Society, Events, Projects, Tech">
+    <meta name="author" content="IEEE CS KDU">
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="IEEE CS KDU - Official Website" />
+    <meta property="og:description" content="Official website for IEEE Computer Society Student Branch Chapter of General Sir John Kotelawala Defence University" />
+    <meta property="og:image" content="https://ieeecskdu.com/og-image.jpg" />
+    <meta property="og:url" content="https://ieeecskdu.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="IEEE CS KDU - Official Website" />
+    <meta name="twitter:description" content="Official website for IEEE Computer Society Student Branch Chapter at KDU." />
+    <meta name="twitter:image" content="https://ieeecskdu.com/og-image.jpg" />
+    
   </head>
   <body>
     <div id="root"></div>
