--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/KDU_CS.png" />
+    <link rel="icon" type="image/png" href="https://ieeecskdu.com/KDU_CS.png" />
 
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,19 +21,18 @@
     <meta name="author" content="IEEE CS KDU">
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph (Facebook, LinkedIn) -->
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="IEEE CS KDU - Official Website" />
-    <meta property="og:description" content="Official website for IEEE Computer Society Student Branch Chapter of General Sir John Kotelawala Defence University" />
-    <meta property="og:image" content="https://ieeecskdu.com/og-image.jpg" />
+    <meta property="og:description" content="Explore events, projects, and innovations from the IEEE Computer Society Student Branch Chapter at KDU." />
+    <meta property="og:image" content="https://ieeecskdu.com/og-banner.jpg" />
     <meta property="og:url" content="https://ieeecskdu.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="IEEE CS KDU - Official Website" />
-    <meta name="twitter:description" content="Official website for IEEE Computer Society Student Branch Chapter at KDU." />
-    <meta name="twitter:image" content="https://ieeecskdu.com/og-image.jpg" />
-    
+    <meta name="twitter:description" content="Explore events, projects, and innovations from the IEEE Computer Society Student Branch Chapter at KDU." />
+    <meta name="twitter:image" content="https://ieeecskdu.com/og-banner.jpg" />
   </head>
   <body>
     <div id="root"></div>
