--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="IEEE CS KDU - Official Website" />
     <meta property="og:description" content="Explore events, projects, and innovations from the IEEE Computer Society Student Branch Chapter at KDU." />
-    <meta property="og:image" content="https://ieeecskdu.com/og-banner.jpg" />
+    <meta property="og:image" content="https://ieeecskdu.com/KDU_CS.png" />
     <meta property="og:url" content="https://ieeecskdu.com" />
     <meta property="og:type" content="website" />
 
@@ -32,7 +32,28 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="IEEE CS KDU - Official Website" />
     <meta name="twitter:description" content="Explore events, projects, and innovations from the IEEE Computer Society Student Branch Chapter at KDU." />
-    <meta name="twitter:image" content="https://ieeecskdu.com/og-banner.jpg" />
+    <meta name="twitter:image" content="https://ieeecskdu.com/KDU_CS.png" />
+
+    <!-- 🔍 SEO Enhancements for PixelWave Page -->
+    <meta name="keywords" content="PixelWave, Pixel Wave, Inter University Digital Art Competition, Digital Design, IEEE CS KDU, PixelWave 2025, PixelWave Competition, KDU Art" />
+    <meta name="description" content="PixelWave - Inter University Digital Art Competition by IEEE CS KDU. A way of Digital Design idea. Showcasing creativity, design innovation, and digital art excellence." />
+    <meta property="og:title" content="PixelWave - Inter University Digital Art Competition | IEEE CS KDU" />
+    <meta property="og:description" content="Join PixelWave by IEEE CS KDU — A way of Digital Design idea. Explore Sri Lanka’s premier university-level digital art competition." />
+    <meta property="og:image" content="https://ieeecskdu.com/pixelwavelogo.jpg" />
+    <meta property="og:url" content="https://ieeecskdu.com/pixelwave" />
+    <meta property="og:type" content="article" />
+    <meta name="twitter:title" content="PixelWave - Inter University Digital Art Competition | IEEE CS KDU" />
+    <meta name="twitter:description" content="Explore PixelWave — A way of Digital Design idea. Inter University Digital Art Competition by IEEE CS KDU." />
+    <meta name="twitter:image" content="https://ieeecskdu.com/pixelwavelogo.jpg" />
+
+    <!-- 🔍 SEO for Board 25/26 Page -->
+    <meta name="keywords" content="Theekshana Dulanjana, IEEE CS KDU, Webmaster, Executive Committee, 2025, 2026, Leadership, KDU Computer Society" />
+    <meta name="description" content="Meet Theekshana Dulanjana and the 2025/2026 Board of IEEE CS KDU. Discover the leadership behind KDU’s most innovative tech society." />
+    <meta property="og:title" content="Theekshana Dulanjana - IEEE CS KDU Webmaster 2025/26" />
+    <meta property="og:description" content="Learn about Theekshana Dulanjana, a dedicated member of the IEEE Computer Society Student Branch Chapter at KDU." />
+    <meta property="og:url" content="https://ieeecskdu.com/components/board25-26" />
+    <meta name="twitter:title" content="Theekshana Dulanjana - IEEE CS KDU Webmaster 2025/26" />
+    <meta name="twitter:description" content="Get to know Theekshana Dulanjana and the IEEE CS KDU Executive Committee 2025/26." />
   </head>
   <body>
     <div id="root"></div>
